--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-slate
 title: Shaidy Advice's homepage
 description: Coming soon!
+
+# Social links
+twitter_username: yourusername
+linkedin_username: yourusername
