--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,7 @@ description: Coming soon!
 # Social links
 twitter_username: yourusername
 linkedin_username: yourusername
+
+remote_theme: pages-themes/slate@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
