--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,5 @@
+title: Slate theme
+description: Slate is a theme for GitHub Pages.
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-slate
-title: Shaidy Advice's homepage
-description: Coming soon!
-
-# Social links
-twitter_username: yourusername
-linkedin_username: yourusername
-
-remote_theme: pages-themes/slate@v0.2.0
-plugins:
-- jekyll-remote-theme # add this line to the plugins list if you already have one
