--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
-show_downloads: true
+title: Shaidy Advice
+description: Data scientist and consultant for DFS and bestball
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-slate
