--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ page-col: "#EAEAEA"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-navbar-col: "#1f1732"
+navbar-col: "##291f43"
 #navbar was previously #EAEAEA beige 
 navbar-text-col: "#EAEAEA"
 navbar-border-col: "#DDDDDD"
