--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ navbar-links:
   Stuff I've Worked On: 
     - DFS: "dfs-work"
     - Bestball: "bestball-work"
-  On Air: "media"
-  About Me: "aboutme"
+  On Air: "on-air"
+  About Me: "about-me"
 
 
 ################
