--- a/_config.yml
+++ b/_config.yml
@@ -50,7 +50,7 @@ title-img: /assets/shaidy-logo-rect.png
 #####################################
 
 social-network-links:
-  email: "shaidyadvice@gmail.com"
+  email: "info@shaidyadvice.com"
   twitter: shaidyadvice
   youtube: "@shaidyadvice"
   twitch: shaidyadvice
