--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ navbar-links:
   Home: /
   Stuff I've Worked On: 
     - DFS: "dfs-work"
-    - Bestball: "bestball-work"
+    - Best Ball: "bestball-work"
   On Air: "on-air"
   About Me: "about-me"
 
